--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,17 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-06-09 19:58+0000\n"
+"PO-Revision-Date: 2025-07-28 03:09+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
 "Language-Team: Chinese (Simplified Han script) <https://"
-"translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-"
-"pictureoftheday/zh_Hans/>\n"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 5.11.4\n"
+"X-Generator: Weblate 5.12.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -525,16 +525,11 @@ msgid "Picture Of The Day needs an API key"
 msgstr "需要 API 密钥"
 
 #: src/app/model/error_notification.rs:48
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Please configure a valid API key for %1 in the application preferences. "
-#| "The current key appears to be invalid."
 msgctxt "error-notification.description"
 msgid ""
 "Please configure a valid API key for {source_name} in the application "
 "preferences. The current key appears to be invalid."
-msgstr "请在应用程序首选项中为 %1 配置有效的 API 密钥。当前密钥似乎无效。"
+msgstr "请在应用程序首选项中为 {source_name} 配置有效的 API 密钥。当前密钥似乎无效。"
 
 #: src/app/model/error_notification.rs:66
 msgctxt "error-notification.title"
@@ -542,17 +537,12 @@ msgid "Picture Of The Day was rate-limited"
 msgstr "速率限制"
 
 #: src/app/model/error_notification.rs:72
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %1 server is rate-limited and does currently not allow you to fetch "
-#| "an image. Try again later, or try a different source."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server is rate-limited and does currently not allow you to "
 "fetch an image. Try again later, or try a different source."
-msgstr ""
-"%1 服务器有速率限制，目前不允许您获取图片。请稍后重试，或尝试其他来源。"
+msgstr "{source_name} "
+"服务器有速率限制，目前不允许您获取图片。请稍后重试，或尝试其他来源。"
 
 #: src/app/model/error_notification.rs:85
 #: src/app/model/error_notification.rs:103
@@ -561,31 +551,19 @@ msgid "No image today"
 msgstr "今天没有图片"
 
 #: src/app/model/error_notification.rs:90
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Currently, %1 does not provide an image for today. Try again later, or "
-#| "try a different source."
 msgctxt "error-notification.description"
 msgid ""
 "Currently, {source_name} does not provide an image for today. Try again "
 "later, or try a different source."
-msgstr "目前，%1 没有提供今天的图片。请稍后重试，或尝试其他来源。"
+msgstr "目前，{source_name} 没有提供今天的图片。请稍后重试，或尝试其他来源。"
 
 #: src/app/model/error_notification.rs:108
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Today, %1 provides a video or another type of media which this "
-#| "application does not support. Try again tomorrow, or try a different "
-#| "source."
 msgctxt "error-notification.description"
 msgid ""
 "Today, {source_name} provides a video or another type of media which this "
 "application does not support. Try again tomorrow, or try a different source."
-msgstr ""
-"今天，%1 提供了本应用程序不支持的视频或其他类型的媒体。请明天重试，或尝试其他"
-"来源。"
+msgstr "今天，{source_name} "
+"提供了本应用程序不支持的视频或其他类型的媒体。请明天重试，或尝试其他来源。"
 
 #: src/app/model/error_notification.rs:125
 #: src/app/model/error_notification.rs:146
@@ -595,36 +573,25 @@ msgid "Fetching images failed"
 msgstr "获取图片失败"
 
 #: src/app/model/error_notification.rs:130
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %s server replied with HTTP status %2. The server may have issues "
-#| "currently. Try again later, or try a different source. If the issue "
-#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server replied with HTTP status {http_status}. The server "
 "may have issues currently. Try again later, or try a different source. If "
 "the issue persists please report the problem."
 msgstr ""
-"%s 服务器回复了 HTTP 状态 %2。服务器当前可能有问题。请稍后重试，或尝试其他来"
-"源。如果问题仍然存在，请报告问题。"
+"{source_name} 服务器回复了 HTTP 状态 "
+"{http_status}。服务器当前可能有问题。请稍后重试，或尝试其他来源。如果问题仍然"
+"存在，请报告问题。"
 
 #: src/app/model/error_notification.rs:151
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %1 server responded with invalid data. The server may have issues "
-#| "currently. Try again later, or try a different source. If the issue "
-#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server responded with invalid data. The server may have "
 "issues currently. Try again later, or try a different source. If the issue "
 "persists please report the problem."
-msgstr ""
-"%1 服务器响应了无效数据。服务器当前可能有问题。请稍后重试，或尝试其他来源。如"
-"果问题仍然存在，请报告问题。"
+msgstr "{source_name} "
+"服务器响应了无效数据。服务器当前可能有问题。请稍后重试，或尝试其他来源。如果"
+"问题仍然存在，请报告问题。"
 
 #: src/app/model/error_notification.rs:171
 msgctxt "error-notification.title"
@@ -632,36 +599,26 @@ msgid "Limited network connectivity"
 msgstr "网络连接受限"
 
 #: src/app/model/error_notification.rs:177
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while fetching today's image from %1, with the "
-#| "following message: %2. Your system appears to have only limited network "
-#| "connectivity. Try to connect your system to the internet."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while fetching today's image from {source_name}, with "
 "the following message: {error}. Your system appears to have only limited "
 "network connectivity. Try to connect your system to the internet."
 msgstr ""
-"从 %1 获取今天的图片时发生 I/O 错误，消息如下：%2。您的系统网络连接似乎受限。"
-"请尝试将您的系统连接到互联网。"
+"从 {source_name} 获取今天的图片时发生 I/O "
+"错误，消息如下：{error}。您的系统网络连接似乎受限。请尝试将您的系统连接到互联"
+"网。"
 
 #: src/app/model/error_notification.rs:193
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while fetching today's image from %1, with the "
-#| "following message: %2. Try again later, or try a different source. If the "
-#| "issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while fetching today's image from {source_name}, with "
 "the following message: {error}. Try again later, or try a different source. "
 "If the issue persists please report the problem."
 msgstr ""
-"从 %1 获取今天的图片时发生 I/O 错误，消息如下：%2。请稍后重试，或尝试其他来"
-"源。如果问题仍然存在，请报告问题。"
+"从 {source_name} 获取今天的图片时发生 I/O "
+"错误，消息如下：{error}。请稍后重试，或尝试其他来源。如果问题仍然存在，请报告"
+"问题。"
 
 #: src/app/widgets/application_window.rs:74
 msgctxt "error-notification.title"
@@ -669,16 +626,11 @@ msgid "Failed to open source URL"
 msgstr "无法打开源 URL"
 
 #: src/app/widgets/application_window.rs:81
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening %1, with the following message: %2. "
-#| "If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening {url}, with the following message: "
 "{error}. If the issue persists please report the problem."
-msgstr "打开 %1 时发生 I/O 错误，消息如下：%2。如果问题仍然存在，请报告问题。"
+msgstr "打开 {url} 时发生 I/O 错误，消息如下：{error}。如果问题仍然存在，请报告问题。"
 
 #: src/app/widgets/application_window.rs:103
 msgctxt "error-notification.title"
@@ -686,16 +638,11 @@ msgid "Failed to set wallpaper"
 msgstr "无法设置壁纸"
 
 #: src/app/widgets/application_window.rs:110
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while setting the wallpaper, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while setting the wallpaper, with the following "
 "message: {error}. If the issue persists please report the problem."
-msgstr "设置壁纸时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+msgstr "设置壁纸时发生 I/O 错误，消息如下：{error}。如果问题仍然存在，请报告问题。"
 
 #: src/app/widgets/application_window.rs:143
 msgctxt "error-notification.title"
@@ -703,23 +650,16 @@ msgid "Failed to open image"
 msgstr "无法打开图片"
 
 #: src/app/widgets/application_window.rs:150
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening the current image, with the following "
 "message: {error}. If the issue persists please report the problem."
-msgstr ""
-"打开当前图片时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+msgstr "打开当前图片时发生 I/O "
+"错误，消息如下：{error}。如果问题仍然存在，请报告问题。"
 
 #: src/app/widgets/application_window.rs:170
-#, fuzzy
-#| msgid "Saved image %1"
 msgid "Saved image {name}"
-msgstr "已保存图片 %1"
+msgstr "已保存图片 {name}"
 
 #: src/app/widgets/application_window.rs:189
 msgctxt "error-notification.title"
@@ -727,17 +667,12 @@ msgid "Failed to save image"
 msgstr "无法保存图片"
 
 #: src/app/widgets/application_window.rs:196
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while saving the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while saving the current image, with the following "
 "message: {error}. If the issue persists please report the problem."
-msgstr ""
-"保存当前图片时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+msgstr "保存当前图片时发生 I/O "
+"错误，消息如下：{error}。如果问题仍然存在，请报告问题。"
 
 #: src/app/widgets/application_window.rs:218
 msgctxt "alert.response"
@@ -770,26 +705,12 @@ msgid "Save image"
 msgstr "保存图片"
 
 #: src/app/widgets/preferences_dialog.rs:73
-#, fuzzy
-#| msgid "%1/%2 collection enabled"
-#| msgid_plural "%1/%2 collections enabled"
 msgid "{n}/{total} collection enabled"
 msgid_plural "{n}/{total} collections enabled"
-msgstr[0] "%1/%2 集合已启用"
+msgstr[0] "{n}/{total} 集合已启用"
 
 #. Translators: This is Pango markup, be sure to escape appropriately
 #: src/config.rs:71
-#, fuzzy
-#| msgctxt "about-dialog.license-text"
-#| msgid ""
-#| "Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
-#| "\n"
-#| "Licensed under the terms of the EUPL 1.2. You can find official "
-#| "translations of the license text at <a href=\"%1\">%1</a>.\n"
-#| "\n"
-#| "The full English text follows.\n"
-#| "\n"
-#| "%2"
 msgctxt "about-dialog.license-text"
 msgid ""
 "Copyright {copyright_name} &lt;{copyright_mail}&gt;\n"
@@ -801,14 +722,14 @@ msgid ""
 "\n"
 "{license_text}"
 msgstr ""
-"版权所有 Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"版权所有 {copyright_name} &lt;{copyright_mail}&gt;\n"
 "\n"
-"根据 EUPL 1.2 条款授权。您可以在 <a href=\"%1\">%1</a> 找到许可证文本的官方译"
-"本。\n"
+"根据 EUPL 1.2 条款授权。您可以在 <a href=\"{translations}\">{translations}</"
+"a> 找到许可证文本的官方译本。\n"
 "\n"
 "完整的英文文本如下。\n"
 "\n"
-"%2"
+"{license_text}"
 
 #: src/images/source.rs:58
 msgctxt "source name"
@@ -856,28 +777,19 @@ msgid "All rights reserved."
 msgstr "版权所有。"
 
 #: src/images/sources/stalenhag.rs:98
-#, fuzzy
-#| msgctxt "source.stalenhag.description"
-#| msgid "Collection: %s"
 msgctxt "source.stalenhag.description"
 msgid "Collection: {}"
-msgstr "集合：%s"
+msgstr "集合：{}"
 
 #: src/images/sources/wikimedia.rs:67
-#, fuzzy
-#| msgctxt "source.wikimedia.copyright"
-#| msgid "%artist (%credit, %license)"
 msgctxt "source.wikimedia.copyright"
 msgid "{artist} ({credit}, {license})"
-msgstr "%artist (%credit, %license)"
+msgstr "{artist}（{credit}，{license}）"
 
 #: src/images/sources/wikimedia.rs:75
-#, fuzzy
-#| msgctxt "source.wikimedia.copyright"
-#| msgid "%artist (%license)"
 msgctxt "source.wikimedia.copyright"
 msgid "{artist} ({license})"
-msgstr "%artist (%license)"
+msgstr "{artist}（{license}）"
 
 #: src/images/sources/wikimedia.rs:85
 msgctxt "source.wikimedia.copyright"
