--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-07-23 08:09+0000\n"
+"PO-Revision-Date: 2025-08-12 18:20+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -135,7 +135,7 @@ msgstr "Kunstwerk"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Fix wallpaper updates."
-msgstr ""
+msgstr "Aktualisierung des Hintergrundbilds korrigiert."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:58
 msgid "Drag images out of the app to copy them into other apps."
