Update translation files
Updated by "Update PO files to match POT (msgmerge)" add-on in Weblate.

Co-authored-by: Codeberg Translate <translate@codeberg.org>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-08-12 18:20+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/"
-"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
+"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -364,58 +364,58 @@ msgctxt "main-window.toolbar.button.tooltip"
 msgid "Toggle the sidebar with image information"
 msgstr "Seitenleiste mit Bildinformationen umschalten"
 
-#: resources/ui/application-window.blp:175
-msgctxt "images-view.metadata.label"
-msgid "Title"
-msgstr "Titel"
-
-#: resources/ui/application-window.blp:184
-msgid "Visit the source page of this image."
-msgstr "Die Quellseite dieses Bildes besuchen."
-
-#: resources/ui/application-window.blp:193
-msgctxt "images-view.metadata.label"
-msgid "Copyright"
-msgstr "Urheberrecht"
-
-#: resources/ui/application-window.blp:204
-msgctxt "images-view.metadata.label"
-msgid "Description"
-msgstr "Beschreibung"
-
-#: resources/ui/application-window.blp:217
-msgctxt "images-view.metadata.label"
-msgid "Source"
-msgstr "Quelle"
-
-#: resources/ui/application-window.blp:225
-msgid "Visit the main page of the source of this image."
-msgstr "Die Hauptseite der Quelle dieses Bildes besuchen."
-
-#: resources/ui/application-window.blp:244
-msgctxt "start-page.button.label"
-msgid "Get images"
-msgstr "Bilder erhalten"
-
-#: resources/ui/application-window.blp:262
+#: resources/ui/application-window.blp:134
 msgctxt "main-window.menu.label"
 msgid "_Quit"
 msgstr "_Beenden"
 
-#: resources/ui/application-window.blp:269
+#: resources/ui/application-window.blp:141
 msgctxt "application-window.menu.label"
 msgid "_Preferences"
 msgstr "_Einstellungen"
 
-#: resources/ui/application-window.blp:274
+#: resources/ui/application-window.blp:146
 msgctxt "application-window.menu.label"
 msgid "_Keyboard Shortcuts"
 msgstr "_Tastenkürzel"
 
-#: resources/ui/application-window.blp:279
+#: resources/ui/application-window.blp:151
 msgctxt "main-window.menu.label"
 msgid "_About Picture Of The Day"
 msgstr "_Über Bild des Tages"
+
+#: resources/ui/application-window.blp:200
+msgctxt "images-view.metadata.label"
+msgid "Title"
+msgstr "Titel"
+
+#: resources/ui/application-window.blp:209
+msgid "Visit the source page of this image."
+msgstr "Die Quellseite dieses Bildes besuchen."
+
+#: resources/ui/application-window.blp:218
+msgctxt "images-view.metadata.label"
+msgid "Copyright"
+msgstr "Urheberrecht"
+
+#: resources/ui/application-window.blp:229
+msgctxt "images-view.metadata.label"
+msgid "Description"
+msgstr "Beschreibung"
+
+#: resources/ui/application-window.blp:242
+msgctxt "images-view.metadata.label"
+msgid "Source"
+msgstr "Quelle"
+
+#: resources/ui/application-window.blp:250
+msgid "Visit the main page of the source of this image."
+msgstr "Die Hauptseite der Quelle dieses Bildes besuchen."
+
+#: resources/ui/application-window.blp:269
+msgctxt "start-page.button.label"
+msgid "Get images"
+msgstr "Bilder erhalten"
 
 #: resources/ui/error-notification-page.blp:21
 msgid "Open preferences"
