--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-07-28 03:09+0000\n"
+"PO-Revision-Date: 2025-08-14 09:09+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
 "Language-Team: Chinese (Simplified Han script) <https://"
-"translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-"
-"pictureoftheday/zh_Hans/>\n"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -130,7 +130,7 @@ msgstr "作品"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Fix wallpaper updates."
-msgstr ""
+msgstr "修复壁纸更新。"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:58
 msgid "Drag images out of the app to copy them into other apps."
