--- a/po/nl.po
+++ b/po/nl.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-07-24 19:09+0000\n"
+"PO-Revision-Date: 2025-08-14 09:09+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -134,7 +134,7 @@ msgstr "Kunst"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
 msgid "Fix wallpaper updates."
-msgstr ""
+msgstr "Opgelost: bijwerken van achtergronden."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:58
 msgid "Drag images out of the app to copy them into other apps."
